rest.js -> professores-rest.js

--- a/demo/src/main/resources/static/professores.html
+++ b/demo/src/main/resources/static/professores.html
@@ -31,7 +31,7 @@
             <tbody id="corpoTabelaProfessores"> </tbody>
         </table>
         
-		<script src="rest.js"></script>
+		<script src="professores-rest.js"></script>
 	    <script>
 			const tabelaProfessores = document.querySelector('#tabelaProfessores');
 			const tabelaFormulario = document.querySelector('#tabelaFormulario');
